pages/assets/daily-streakers.css
:root {
	--streakers-item-background: hsl(0, 0%, 90%);
	--streakers-item-background-count: hsla(0, 0%, 0%, 0.15);
	--streakers-item-text: hsl(0, 0%, 0%);
	--streakers-item-link-hover: hsl(0, 0%, 80%);
	--streakers-item-outline-played: hsl(89, 100%, 20%);
	--streakers-item-outline-upgraded: hsl(184, 100%, 40%);
	--streakers-item-outline-downgraded: hsl(30, 100%, 30%);
	--streakers-item-fallen: hsl(0, 100%, 20%);
	--streakers-item-fallen-foreground: hsl(0, 0%, 100%);
	--streakers-item-fallen-count: hsla(0, 0%, 100%, 0.25);

	--sorter-item-background: hsl(0, 0%, 90%);
	--sorter-item-foreground: hsl(0, 0%, 0%);
	--sorter-item-hover-background: hsl(0, 0%, 70%);
	--sorter-item-active-background: hsl(0, 0%, 30%);
	--sorter-item-active-foreground: hsl(0, 0%, 100%);
}

@media (prefers-color-scheme: dark) {
	:root {
		--streakers-item-background: hsl(0, 0%, 10%);
		--streakers-item-background-count: hsla(0, 0%, 100%, 0.2);
		--streakers-item-text: hsl(0, 0%, 100%);
		--streakers-item-link-hover: hsl(0, 0%, 0%);
		--streakers-item-outline-played: hsl(89, 100%, 70%);
		--streakers-item-outline-upgraded: hsl(184, 100%, 35%);
		--streakers-item-outline-downgraded: hsl(30, 100%, 40%);
		--streakers-item-fallen: hsl(0, 100%, 80%);
		--streakers-item-fallen-foreground: hsl(0, 0%, 0%);
		--streakers-item-fallen-count: hsla(0, 0%, 0%, 0.2);

		--sorter-item-background: hsl(0, 0%, 10%);
		--sorter-item-foreground: hsl(0, 0%, 100%);
		--sorter-item-hover-background: hsl(0, 0%, 40%);
		--sorter-item-active-background: hsl(0, 0%, 80%);
		--sorter-item-active-foreground: hsl(0, 0%, 0%);
	}
}

.streakers-list {
	background-color: transparent;
	display: flex;
	flex-wrap: wrap;
	flex-direction: row;
	gap: 0.3rem;
	padding: 0;
}

.streakers-list__item {
	background-color: var(--streakers-item-background);
	color: var(--streakers-item-text);
	border-radius: 1rem;
	display: flex;
	flex-direction: row;
	padding: 0.3rem 0.9rem;
	gap: 0.3rem;
	position: relative;
	overflow: hidden;
	transition-duration: 0.1s;
	align-items: center;
}

.streakers-list__item:hover {
	background-color: var(--streakers-item-link-hover);
}

.streakers-list__link {
	text-decoration-line: none;
	color: var(--streakers-item-text);
}

.streakers-list__link::before {
	position: absolute;
	height: 100%;
	width: 100%;
	top: 0;
	left: 0;
	content: "";
	background-color: transparent;
	z-index: 1;
}

.streakers-list__tier {
	position: relative;
	height: 1rem;
	width: 1rem;
}

.streakers-list__tier-image {
	position: absolute;
	height: 100%;
	width: 100%;
	object-fit: contain;
	filter: invert(var(--inverted-when-dark));
}

.streakers-list__count {
	font-size: 0.75rem;
	text-transform: capitalize;
	font-weight: bold;
	position: relative;
	background-color: var(--streakers-item-background-count);
	color: var(--streakers-item-text);
	padding: 0 0.3rem;
	border-radius: 1rem;
}

.streakers-list__item--played {
	box-shadow: inset 0 0 0 0.2rem var(--streakers-item-outline-played);
}

.streakers-list__item--upgraded {
	box-shadow: inset 0 0 0 0.1rem var(--streakers-item-outline-upgraded);
}

.streakers-list__item--downgraded {
	box-shadow: inset 0 0 0 0.1rem var(--streakers-item-outline-downgraded);
}

.streakers-list__item--fallen {
	background-color: var(--streakers-item-fallen);
}

.streakers-list__item--fallen:hover {
	background-color: var(--streakers-item-fallen);
}

.streakers-list__item--fallen .streakers-list__link {
	color: var(--streakers-item-fallen-foreground);
}

.streakers-list__item--fallen .streakers-list__tier-image {
	filter: invert(var(--inverted-when-light));
}

.streakers-list__item--fallen .streakers-list__count {
	background-color: var(--streakers-item-fallen-count);
	color: var(--streakers-item-fallen-foreground);
}

.sorter {
	display: flex;
	flex-direction: column;
	gap: 0.3rem;
}

.sorter__list {
	display: flex;
	flex-wrap: wrap;
	flex-direction: row;
	gap: 0.3rem;
	padding: 0px;
	/* justify-content: center; */
	align-items: center;
}

.sorter__label {
	font-size: small;
	font-weight: bold;
}

.sorter__item {
	padding: 0.3rem 0.6rem;
	border-radius: 1rem;
	text-decoration: none;
	background-color: var(--sorter-item-background);
	color: var(--sorter-item-foreground);
	font-size: small;
	display: flex;
	gap: 0.1rem;
	position: relative;
	transition: linear 0.1s;
	/* text-transform: uppercase; */
	/* font-weight: 500; */
}

.sorter__item:hover {
	background-color: var(--sorter-item-hover-background);
}

.sorter__item--active {
	background-color: var(--sorter-item-active-background);
	/* font-weight: bold; */
}

.sorter__item--active:hover {
	background-color: var(--sorter-item-active-background);
}

.sorter__link {
	text-decoration: none;
	color: var(--sorter-item-foreground);
}

.sorter__item--active .sorter__link {
	color: var(--sorter-item-active-foreground);
}

.sorter__link::before {
	position: absolute;
	height: 100%;
	width: 100%;
	top: 0;
	left: 0;
	content: "";
	background-color: transparent;
	z-index: 1;
}

.sorter__link > span {
	left: 0.5rem;
	position: relative;
	transition: linear 0.1s;
}

.sorter__item:hover .sorter__link > span {
	left: 0;
}

.sorter__item--active .sorter__link > span {
	left: 0;
}

.sorter__item--force-show-indicator .sorter__link > span {
	left: 0;
}

.sorter__indicator {
	position: relative;
	height: 1rem;
	width: 1rem;
	transition: linear 0.1s;
	left: -0.5rem;
}

.sorter__item:hover .sorter__indicator {
	left: 0;
}

.sorter__item--active .sorter__indicator {
	left: 0;
	filter: invert(1);
}

.sorter__item--force-show-indicator .sorter__indicator {
	left: 0;
}

.sorter__indicator-image {
	position: absolute;
	height: 100%;
	width: 100%;
	object-fit: contain;
	filter: invert(var(--inverted-when-dark));
	opacity: 0;
	transition: linear 0.1s;
}

.sorter__item:hover .sorter__indicator-image {
	opacity: 1;
}

.sorter__item--active .sorter__indicator-image {
	opacity: 1;
}

.sorter__item--force-show-indicator .sorter__indicator-image {
	opacity: 1;
}

@media (max-width: 576px) {
}

@media (max-width: 992px) {
}

